--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
+  - title: "CV1"
     url: /cv/
     
   - title: "Guide"
