--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,17 @@
 main:
   - title: "English" # Or "英文"
     url: "https://longweihan.github.io/"
-  - title: "Publications"
-    url: /publications/
-  - title: "Talks"
-    url: /talks/
+ # - title: "Publications"
+ #   url: /publications/
+ # - title: "Talks"
+ #   url: /talks/
   - title: "Friends"
     url: /friends/
-  - title: "Portfolio" # 请特别检查这一行和它上面的缩进
-    url: /portfolio/
-  - title: "Blog Posts"
-    url: /year-archive/
-  - title: "CV1"
-    url: /cv/
-  - title: "Guide"
-    url: /markdown/
+ # - title: "Portfolio" # 请特别检查这一行和它上面的缩进
+ #   url: /portfolio/
+ # - title: "Blog Posts"
+ #   url: /year-archive/
+ # - title: "CV1"
+ #   url: /cv/
+ # - title: "Guide"
+ #   url: /markdown/
