--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,26 @@
 main:
   - title: "English" # Or "英文"
     url: "https://longweihan.github.io/"
- # - title: "Publications"
- #   url: /publications/
- # - title: "Talks"
- #   url: /talks/
-  - title: "Friends"
+
+  # - title: "Publications"
+  #   url: /publications/
+  # - title: "Talks"
+  #   url: /talks/
+
+  - title: "朋友"
     url: /friends/
- # - title: "Portfolio" # 请特别检查这一行和它上面的缩进
- #   url: /portfolio/
- # - title: "Blog Posts"
- #   url: /year-archive/
- # - title: "CV1"
- #   url: /cv/
- # - title: "Guide"
- #   url: /markdown/
+
+  # - title: "Portfolio" # 请特别检查这一行和它上面的缩进
+  #   url: /portfolio/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
+  # - title: "CV1"
+  #   url: /cv/
+  # - title: "Guide"
+  #   url: /markdown/
+
+  # ===== 添加中文简历链接 =====
+  - title: "中文简历"
+    url: /files/longweihan_cv_cn.pdf # <-- 将“你的简历文件名.pdf”替换为你实际的 PDF 文件名
+    target: _blank # 让链接在新标签页中打开
+  # ============================
