--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "中国成都"
   employer         : "电子科技大学"
   uri              : # URL
-  email            : "longwh2003@gmail.com" 
+  email            : "weihanlong@std.uestc.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
